# dia

./: README.md  main.py  pyproject.toml  test_no_flex_attention.py  visualize_spectrogram.py
dia/: layers.py  model.py
example/: safetensors_example.py
