[project]
name = "dia-tts"
version = "0.1.0"
description = "Dia - A text-to-speech model for dialogue generation"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Nari Labs", email = "contact@narilabs.ai"}
]
maintainers = [
    {name = "cccntu"}
]
dependencies = [
    "descript-audio-codec>=1.0.0",
    "huggingface-hub>=0.30.2",
    "numpy>=2.2.0",
    "pydantic>=2.0.0",
    "soundfile>=0.13.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
ui = ["gradio>=5.25.2"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dia"]
